--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+*.ckpt
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -56,7 +58,7 @@ coverage.xml
 *.pot
 
 # Django stuff:
-*.log
+# *.log
 local_settings.py
 db.sqlite3
 db.sqlite3-journal
@@ -147,6 +149,6 @@ dmypy.json
 # Lightning-Hydra-Template
 configs/local/default.yaml
 data/
-logs/
+# logs/
 .env
 .autoenv
